# server/swagger/swagger.yml
@@ -493,6 +493,15 @@ definitions:
     - updateAt
     type: object
     x-go-package: github.com/mattermost/focalboard/server/model
+  OnboardingResponse:
+    description: OnboardResponse contains basic data required by the client to complete the onboarding
+    properties:
+      workspaceID:
+        description: the workspace to send to user to, to start the onboarding tour
+        type: string
+      boardID:
+        description: the board to send to user to, to start the onboarding tour
+        type: string
 host: localhost
 info:
   contact:
